docs: code identaion checked and fixed

--- a/restaurant.html
+++ b/restaurant.html
@@ -5,6 +5,8 @@
     <!-- Normalize.css for better cross-browser consistency -->
     <meta name="viewport" content="width=device-width,initial-scale=1">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="theme-color" content="#317EFB" />
+    <link rel="manifest" href="/manifest.json">
     <link rel="stylesheet" src="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.0/normalize.css" />
     <link href="https://fonts.googleapis.com/css?family=Montserrat" rel="stylesheet">
     <!-- Main CSS file -->
