feat: home page href links are updated

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <div class="container">
         <header>
             <nav>
-                <h1><a href="/">Restaurant Reviews</a></h1>
+                <h1><a href="https://ozkanabdullahoglu.github.io/restaurant-review-project/">Restaurant Reviews</a></h1>
             </nav>
         </header>
         <main id="maincontent">
@@ -37,7 +37,7 @@
             </section>
         </main>
         <footer id="footer">
-            Copyright (c) 2017 <a href="/"><strong>Restaurant Reviews</strong></a> All Rights Reserved.
+            Copyright (c) 2017 <a href="https://ozkanabdullahoglu.github.io/restaurant-review-project/"><strong>Restaurant Reviews</strong></a> All Rights Reserved.
         </footer>
         <script type="application/javascript" charset="utf-8" src="js/dbhelper.js"></script>
         <script type="application/javascript" charset="utf-8" src="js/main.js"></script>
