--- a/restaurant.html
+++ b/restaurant.html
@@ -20,11 +20,11 @@
         <header>
             <!-- Beginning nav -->
             <nav>
-                <h1><a href="/">Restaurant Reviews</a></h1>
+                <h1><a href="https://ozkanabdullahoglu.github.io/restaurant-review-project/">Restaurant Reviews</a></h1>
             </nav>
             <!-- Beginning breadcrumb -->
             <ul id="breadcrumb">
-                <li><a href="/">Home</a></li>
+                <li><a href="https://ozkanabdullahoglu.github.io/restaurant-review-project/">Home</a></li>
             </ul>
             <!-- End breadcrumb -->
             <!-- End nav -->
@@ -59,7 +59,7 @@
         <!-- End main -->
         <!-- Beginning footer -->
         <footer id="footer">
-            Copyright (c) 2017 <a href="/"><strong>Restaurant Reviews</strong></a> All Rights Reserved.
+            Copyright (c) 2017 <a href="https://ozkanabdullahoglu.github.io/restaurant-review-project/"><strong>Restaurant Reviews</strong></a> All Rights Reserved.
         </footer>
         <!-- End footer -->
         <!-- Beginning scripts -->
